--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,13 @@ services:
     depends_on:
       - postgres
     environment:
-      DATABASE_URL: postgres://postgres@tours-db/postgres
+      DATABASE_URL: postgres://postgres:postgres@postgres/postgres
     ports:
     - "9000:9000"
     volumes:
     - .:/usr/src/toerich
     command: uvicorn code.main:app --reload --host=0.0.0.0 --port=9000
+
+networks:
+  toerich_main_net:
+    external: true
